--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 
+<!doctype html>
+
 <head>
   <title> Kids Are Weird </title>
 </head>
 <body>
   <div id="image">
   </div>
-  <script type="image/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 
-<script>
-$("#image").append("<img src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif' >") 
-</script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+
+  <script>
+  $("#image").append("<img src='https://s3.amazonaws.com/learn-verified/painting-with-dog.gif'>");
+  </script>
 </body>
